refactor: Add root property

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- BEGIN test/dummy1.erb -->
   <h1 style="height: 200px;">test</h1>
-  <template-inspector url-prefix="vscode://file/Users/aki/src/github.com/aki77/rails-template-inspector/">
+  <template-inspector url-prefix="vscode://file" root="/Users/aki/src/github.com/aki77/rails-template-inspector">
   </template-inspector>
   <!-- END test/dummy1.erb -->
   <!-- BEGIN test/dummy2.erb -->
