feat: Improve display of paths

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
   </div>
   <!-- END test/dummy2.erb -->
   <div>
-    hogehoge
+    <!-- BEGIN test/small_span.erb -->
+    <span>
+      small
+    </span>
+    <!-- END test/small_span.erb -->
+    <div style="height: 200px;">
+      other block
+    </div>
   </div>
 </body>
 
