--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + Lit App</title>
-  <script type="module" src="/src/template-inspector.ts"></script>
+  <script type="module" src="/src/rails-inspector.ts"></script>
 </head>
 
 <body>
   <!-- BEGIN test/dummy1.erb -->
   <h1 style="height: 200px;">test</h1>
-  <template-inspector url-prefix="vscode://file" root="/Users/aki/src/github.com/aki77/rails-template-inspector"
+  <rails-inspector url-prefix="vscode://file" root="/Users/aki/src/github.com/aki77/rails-template-inspector"
     combo-key="command-shift-o">
-  </template-inspector>
+  </rails-inspector>
   <!-- END test/dummy1.erb -->
   <!-- BEGIN test/dummy2.erb -->
   <div>
