feat: Improve display of path

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <div style="height: 200px;">
       other block
     </div>
+    <!-- BEGIN test/dummy2.erb -->
+    <div style="height: 800px;">
+      dummy2
+    </div>
+    <!-- END test/dummy2.erb -->
   </div>
 </body>
 
