Support for multi-root node templates

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
   <!-- BEGIN test/dummy1.erb -->
+  <!-- BEGIN test/h1.erb -->
   <h1 style="height: 200px;">test</h1>
+  <!-- END test/h1.erb -->
+  <h2>dummy1</h2>
   <rails-inspector url-prefix="vscode://file" root="/Users/aki/src/github.com/aki77/rails-template-inspector"
     combo-key="command-shift-o">
   </rails-inspector>
