--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + Lit App</title>
-  <!-- <script type="module" src="/src/rails-inspector.ts"></script> -->
-  <script type="module" src="https://cdn.skypack.dev/@aki77/rails-template-inspector@^0.4.0"></script>
+  <script type="module" src="/src/rails-inspector.ts"></script>
+  <!-- <script type="module" src="https://cdn.skypack.dev/@aki77/rails-template-inspector@^0.4.1"></script> -->
 </head>
 
 <body>
