fix: adjust parent target limit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+  <!-- BEGIN test/dummy4.erb -->
+  <!-- BEGIN test/dummy3.erb -->
   <!-- BEGIN test/dummy1.erb -->
   <!-- BEGIN test/h1.erb -->
   <div style="height: 200px;">
@@ -24,6 +26,8 @@
   <!-- END test/h1.erb -->
   <h2>dummy1</h2>
   <!-- END test/dummy1.erb -->
+  <!-- END test/dummy3.erb -->
+  <!-- END test/dummy4.erb -->
   <!-- BEGIN test/dummy2.erb -->
   <div>
     dummy
